--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -31,7 +31,7 @@
 
   .modal-footer {
     border-radius: 0 0 2px 2px;
-    background-color: #eee;
+    background-color: #fafafa;
     padding: 4px 6px;
     height: 56px;
     width: 100%;
